<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_mianlayout"
    android:orientation="vertical">

    <com.cn.danceland.myapplication.view.DongLanTitleView
        android:id="@+id/shouhuan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.cn.danceland.myapplication.view.DongLanTitleView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_preview_height"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/day_checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/day_text"
                    android:textColor="@color/colorGray8"
                    android:textSize="@dimen/h5" />

                <CheckBox
                    android:id="@+id/week_checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/week_text"
                    android:textColor="@color/colorGray8"
                    android:textSize="@dimen/h5" />

                <CheckBox
                    android:id="@+id/month_checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/month_text"
                    android:textColor="@color/colorGray8"
                    android:textSize="@dimen/h5" />
            </LinearLayout>

            <!--选择器开始 左右箭头暂时隐藏-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_preview_height"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/iv_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="＜"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <com.cn.danceland.myapplication.view.HorizontalPickerView
                    android:id="@+id/scrollPicker"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="30"
                    android:background="@color/white"
                    app:HorizontalselectedViewSeesize="5"
                    app:HorizontalselectedViewSelectedTextColor="@color/color_dl_yellow"
                    app:HorizontalselectedViewSelectedTextSize="40"
                    app:HorizontalselectedViewTextColor="@color/colorGray8"
                    app:HorizontalselectedViewTextSize="40" />

                <TextView
                    android:id="@+id/iv_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="＞"
                    android:textSize="16sp"
                    android:visibility="gone" />

            </LinearLayout>
            <!--选择器结束-->

            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/line_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_chart_layout_height_d"
                android:layout_marginTop="2dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h2"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/h2"
                    android:gravity="center_horizontal"
                    android:text="@string/fatigue_average_text"
                    android:textColor="@color/colorGray9"
                    android:textSize="@dimen/h6" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/h2"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fatigue_average_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/color_dl_yellow"
                        android:textSize="@dimen/h4" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_triangle_mark"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/h2"
                    android:src="@drawable/img_heart_rate_average_pro" />

                <LinearLayout
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_triangle"
                        android:layout_width="6dp"
                        android:layout_height="5dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/triangle" />
                </LinearLayout>

                <View
                    android:layout_width="345dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@color/deep_sleep_bg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h2"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/h2"
                    android:gravity="center_horizontal"
                    android:text="@string/fatigue_analysis_text"
                    android:textColor="@color/colorGray9"
                    android:textSize="@dimen/h6" />

                <TextView
                    android:id="@+id/fatigue_analysis_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/heart_rate_analysis_text"
                    android:textColor="@color/color_dl_yellow"
                    android:textSize="@dimen/h6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="@dimen/default_margin_edge_d"
                    android:layout_marginRight="@dimen/default_margin_edge_d"
                    android:layout_marginTop="10dp"
                    android:text="@string/fatigue_analysis_detail_text"
                    android:textColor="@color/colorGray9"
                    android:textSize="@dimen/h6" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>